<?xml version="1.0"?>
<package format="2">
  <name>former_gazebo</name>
  <version>0.1.0</version>
  <description>
    For gazebo simulation
  </description>
  <maintainer email="shlee@roas.co.kr">Brighten Lee</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>gazebo</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_ros_control</depend>
  <depend>gazebo_plugins</depend>
  <export>
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" gazebo_model_path="${prefix}/models"/>
  </export>
</package>